# AlgsPlatform

./: CMakeLists.txt  Readme.txt
Algorithms/: CMakeLists.txt  FileLAS.cpp  FileLAS.hpp  M3C2.cpp  M3C2.hpp  M3C2EP.cpp  Main.cpp  PointCloudAI.cpp  PointCloudAI.hpp  VolumeCal.cpp  VolumeCal.hpp
CSF/: CMakeLists.txt  CSF.cpp  CSF.h  CSFMain.cpp  Cloth.h
M3C2/: CMakeLists.txt  M3C2.cpp  M3C2.hpp  Main.cpp
M3C2EP/: CMakeLists.txt  M3C2.cpp  M3C2EP.cpp  M3C2EP.hpp  Main.cpp
VolumeCal/: CMakeLists.txt  Delaunator.hpp  Main.cpp  VolumeCal.cpp  VolumeCal.hpp
shared/: FileLAS.cpp  FileLAS.hpp  PointCloudAI.cpp
windows_dlls/: Readme.txt
